# TGBOTFerzerkki

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/bot/: formatting.py  middleware.py  moderation_thread.py  oferta_official.txt  oferta_public_offer.docx  oferta_text.py  router.py  staff.py  states.py  telegram_log.py  texts.py  texts_balance.py
app/bot/handlers/: admin.py  common.py  games.py  moderation_forum.py  oferta.py  profile.py  support.py  topic_moderation.py
app/bot/keyboards/: admin.py  common.py  topic_moderation.py
app/core/: config.py  constants.py
app/db/: models.py  repositories.py  session.py
app/services/: finance.py  matches.py
deploy/: create-tgbot-user.sh  install-systemd.sh  reset_support_tickets.py  tgbot-ferzerkki.service
tests/: test_config.py  test_finance.py  test_matches.py  test_oferta.py  test_repositories_integration.py
