[project]
name = "clashduel-bot"
version = "0.1.0"
description = "Telegram bot for ClashDuel local MVP"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0",
    "aiohttp-socks>=0.10.0",
    "aiosqlite>=0.21.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

